--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.application.name=BookShopProject
+spring.application.name=book-service
 
-spring.datasource.url=jdbc:h2:mem:demo;DB_CLOSE_DELAY=-1
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+server.port=8081
+
+login.service.base-url=${LOGIN_SERVICE_BASE_URL:http://localhost:8080}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
