--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=book-service
 
 server.port=8081
 
-login.service.base-url=${LOGIN_SERVICE_BASE_URL:http://localhost:8080}
+login.service.base-url=${LOGIN_SERVICE_BASE_URL:http://login-service:8080}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
